add alt text to images

--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                                               href="https://www.walmart.com/"
                                               target="_blank"
                                               ><img
-                                                alt=""
+                                                alt="image of Forge shoe sale of the week"
                                                 height="auto"
                                                 src="images\Sale of the week.png"
                                                 style="
@@ -830,7 +830,7 @@
                                               href="https://www.walmart.com/"
                                               target="_blank"
                                               ><img
-                                                alt=""
+                                                alt="image of Forge shoe options on sale"
                                                 height="auto"
                                                 src="images\main-2.png"
                                                 style="
@@ -927,7 +927,7 @@
                                               href="https://www.walmart.com/"
                                               target="_blank"
                                               ><img
-                                                alt=""
+                                                alt="image of Forge work boots with flashing gif of work boots"
                                                 height="auto"
                                                 src="media\work.gif"
                                                 style="
@@ -1024,7 +1024,7 @@
                                               href="https://www.walmart.com/"
                                               target="_blank"
                                               ><img
-                                                alt=""
+                                                alt="image of women clothing options on sale"
                                                 height="auto"
                                                 src="images\clothing section.png"
                                                 style="
@@ -1121,7 +1121,7 @@
                                               href="https://www.walmart.com/"
                                               target="_blank"
                                               ><img
-                                                alt=""
+                                                alt="free shipping image"
                                                 height="auto"
                                                 src="images\shipping section.png"
                                                 style="
@@ -1218,7 +1218,7 @@
                                               href="https://www.walmart.com/"
                                               target="_blank"
                                               ><img
-                                                alt=""
+                                                alt="mobile apps image"
                                                 height="auto"
                                                 src="images\mobile-apps.png"
                                                 style="
