update image sizing

--- a/index.html
+++ b/index.html
@@ -519,15 +519,15 @@
                       <tbody style="box-sizing:border-box;">
                         <tr style="box-sizing:border-box;">
                           <td style="box-sizing:border-box;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;width: 600px;">
-                            <a href="https://www.walmart.com/" target="_blank" style="box-sizing:border-box;"><img alt="image of Forge shoe sale of the week" height="auto" src="https://keithhorton.dev/email_projects/walmart_pro/images/Sale of the week.png" style="box-sizing:border-box;line-height:100%;-ms-interpolation-mode:bicubic;
+                            <a href="https://www.walmart.com/" target="_blank" style="box-sizing:border-box;"><img alt="image of Forge shoe sale of the week" title="image of Forge shoe sale of the week" src="https://keithhorton.dev/email_projects/walmart_pro/images/Sale of the week.png" style="box-sizing:border-box;line-height:100%;-ms-interpolation-mode:bicubic;
                                                   border: 0;
                                                   display: block;
                                                   outline: none;
                                                   text-decoration: none;
-                                                  height: auto;
-                                                  width: 100%;
                                                   font-size: 13px;
-                                                ;" width="600"></a>
+                                                  width: 100%;
+                                                  height: auto;
+                                                ;" width="600" height="auto"></a>
                           </td>
                         </tr>
                       </tbody>
@@ -814,14 +814,14 @@
                       <tbody style="box-sizing:border-box;">
                         <tr style="box-sizing:border-box;">
                           <td style="box-sizing:border-box;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;width: 600px;">
-                            <a href="https://www.walmart.com/" target="_blank" style="box-sizing:border-box;"><img alt="image of women clothing options on sale" height="auto" src="https://keithhorton.dev/email_projects/walmart_pro/images/clothing section.png" style="box-sizing:border-box;line-height:100%;-ms-interpolation-mode:bicubic;
+                            <a href="https://www.walmart.com/" target="_blank" style="box-sizing:border-box;"><img alt="image of women clothing options on sale" title="image of women clothing options on sale" height="auto" src="https://keithhorton.dev/email_projects/walmart_pro/images/clothing section.png" style="box-sizing:border-box;line-height:100%;-ms-interpolation-mode:bicubic;
                                                   border: 0;
                                                   display: block;
                                                   outline: none;
                                                   text-decoration: none;
-                                                  height: auto;
-                                                  width: 100%;
                                                   font-size: 13px;
+                                                  width: 100%;
+                                                  height: auto;
                                                 ;" width="600"></a>
                           </td>
                         </tr>
@@ -892,14 +892,14 @@
                       <tbody style="box-sizing:border-box;">
                         <tr style="box-sizing:border-box;">
                           <td style="box-sizing:border-box;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;width: 600px;">
-                            <a href="https://www.walmart.com/" target="_blank" style="box-sizing:border-box;"><img alt="free shipping image" height="auto" src="https://keithhorton.dev/email_projects/walmart_pro/images/shipping section.png" style="box-sizing:border-box;line-height:100%;-ms-interpolation-mode:bicubic;
+                            <a href="https://www.walmart.com/" target="_blank" style="box-sizing:border-box; width: 100%"><img alt="free shipping image" title="free shipping image" height="auto" src="https://keithhorton.dev/email_projects/walmart_pro/images/shipping section.png" style="box-sizing:border-box;line-height:100%;-ms-interpolation-mode:bicubic;
                                                   border: 0;
                                                   display: block;
                                                   outline: none;
                                                   text-decoration: none;
+                                                  font-size: 13px;
                                                   height: auto;
                                                   width: 100%;
-                                                  font-size: 13px;
                                                 ;" width="600"></a>
                           </td>
                         </tr>
