--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
         max-height: 0px;
         max-width: 0px;
         opacity: 0;
-        overflow: hidden;
-      ;">
+        overflow: hidden;">
         Get all the goods for less.
       </div>
       <div style="box-sizing:border-box;background-color: #e4e4e4; padding-bottom: 60px;">
@@ -188,14 +187,14 @@
                             <table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" >
                               <tr>
                                 <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-                      <div style="box-sizing:border-box;margin: 0px auto; max-width: 600px;">
-                        <table align="left" border="0" cellpadding="0" cellspacing="0" role="presentation" style="box-sizing:border-box;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;width: 50%;">
+                      <div  style="box-sizing:border-box;margin: 0px auto; max-width: 600px; padding: 0;">
+                        <table align="left" border="0" cellpadding="0" cellspacing="0" role="presentation" style="box-sizing:border-box;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;width: 50%; padding: 0;">
                           <tbody style="box-sizing:border-box;">
                             <tr style="box-sizing:border-box;">
                               <td style="box-sizing:border-box;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;
                             direction: ltr;
                             font-size: 0px;
-                            padding: 0 10px;
+                            padding: 3px 10px;
                             text-align: center;
                           ;">
                                 <!--[if mso | IE]>
@@ -204,10 +203,9 @@
                                 <p style="box-sizing:border-box;display:block;
                               font-size: 10px;
                               text-align: left;
-                              line-height: 2;
-                              margin: -1px 0 -1px 0;
                               color: #6f6f6f;
-                            ;">
+                              margin-block-end: 0;
+                              margin-block-start: 0;">
                                   Get all the goods for less.
                                 </p>
                                 <!--[if mso | IE]></tr>
@@ -223,7 +221,7 @@
                               <td style="box-sizing:border-box;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;
                             direction: ltr;
                             font-size: 0px;
-                            padding: 0 10px;
+                            padding: 3px 10px;
                             text-align: right;
                           ;">
                                 <!--[if mso | IE]>
@@ -234,8 +232,6 @@
                               font-size: 10px;
                               text-decoration: none;
                               color: #6f6f6f;
-                              line-height: 2;
-                              margin: -1px 0 -1px 0;
                               font-family: inherit;
                             ;" href="https://www.walmart.com/" target="_blank">
                                   My account
@@ -297,26 +293,29 @@
                                         padding: 0;
                                         word-break: break-word;
                                       ;">
+                                          <a href="https:/www.walmart.com/" target="_blank">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="box-sizing:border-box;mso-table-lspace:0pt;mso-table-rspace:0pt;
                                           border-collapse: collapse;
                                           border-spacing: 0px;
                                         ;">
                                     <tbody style="box-sizing:border-box;">
-                                      <tr style="box-sizing:border-box;">
-                                        <td style="box-sizing:border-box;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;width: 80px;">
-                                          <img alt="walmart logo" height="auto" src="https://keithhorton.dev/email_projects/walmart_pro/images/wm-logo.png" style="box-sizing:border-box;line-height:100%;-ms-interpolation-mode:bicubic;
-                                                  border: 0;
-                                                  display: block;
-                                                  outline: none;
-                                                  text-decoration: none;
-                                                  height: auto;
-                                                  width: 100%;
-                                                  font-size: 13px;
-                                                ;" width="80">
-                                        </td>
-                                      </tr>
-                                    </tbody>
-                                  </table>
+                                        <tr style="box-sizing:border-box;">
+                                          <td style="box-sizing:border-box;border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;width: 80px;">
+                                            <img alt="walmart logo" height="auto" src="https://keithhorton.dev/email_projects/walmart_pro/images/wm-logo.png" style="box-sizing:border-box;line-height:100%;-ms-interpolation-mode:bicubic;
+                                                    border: 0;
+                                                    display: block;
+                                                    outline: none;
+                                                    text-decoration: none;
+                                                    height: auto;
+                                                    width: 100%;
+                                                    font-size: 13px;
+                                                  ;" width="80">
+                                          </td>
+                                        </tr>
+                                        
+                                      </tbody>
+                                    </table>
+                                  </a>
                                 </td>
                               </tr>
                             </tbody>
@@ -524,7 +523,6 @@
                                                   display: block;
                                                   outline: none;
                                                   text-decoration: none;
-                                                  font-size: 13px;
                                                   width: 100%;
                                                   height: auto;
                                                 ;" width="600" height="auto"></a>
@@ -665,7 +663,6 @@
                                                   text-decoration: none;
                                                   height: auto;
                                                   width: 100%;
-                                                  font-size: 13px;
                                                 ;" width="600"></a>
                           </td>
                         </tr>
